WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92304
[BlackBerry] GraphicsContext3D::reshapeFBOs does not report when bound FBOs should be restored
https://bugs.webkit.org/show_bug.cgi?id=92304
Summary
[BlackBerry] GraphicsContext3D::reshapeFBOs does not report when bound FBOs s...
Joshua Netterfield
Reported
2012-07-25 14:37:46 PDT
... so we fail fast/canvas/webgl/framebuffer-bindings-unaffected-on-resize.html
Attachments
Patch
(2.16 KB, patch)
2012-07-25 17:02 PDT
,
Joshua Netterfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Netterfield
Comment 1
2012-07-25 17:02:35 PDT
Created
attachment 154492
[details]
Patch
Rob Buis
Comment 2
2012-07-25 19:25:16 PDT
Comment on
attachment 154492
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-07-25 19:46:58 PDT
Comment on
attachment 154492
[details]
Patch Clearing flags on attachment: 154492 Committed
r123701
: <
http://trac.webkit.org/changeset/123701
>
WebKit Review Bot
Comment 4
2012-07-25 19:47:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug