[BlackBerry] GraphicsContext3D::reshapeFBOs does not report when bound FBOs should be restored https://bugs.webkit.org/show_bug.cgi?id=92304

Patch by Joshua Netterfield <jnetterfield@rim.com> on 2012-07-25
Reviewed by Rob Buis.

No new tests, because it corrects existing functionality, but it makes BlackBerry
pass framebuffer-bindings-unaffected-on-resize.html.

* platform/graphics/blackberry/GraphicsContext3DBlackBerry.cpp:
(WebCore::GraphicsContext3D::reshapeFBOs):

Canonical link: https://commits.webkit.org/110138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123701 268f45cc-cd09-0410-ab3c-d52691b4dbfc